--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=Optimised for a small memory footprint and power efficiency.
 category=Sensors
 url=https://github.com/JVKran/Forced-BME280
 architectures=*
-includes=forcedClimate.hpp
+includes=forcedClimate.h
 depends=stdint, Wire
