--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Sensors
 url=https://github.com/JVKran/Forced-BME280
 architectures=*
 includes=forcedClimate.h
-depends=stdint, Wire
+depends=stdint, Wire, TinyWireM
